# level-monitor

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
requirements/: requirements-dev.in  requirements-dev.txt
scripts/: compile_requirements.sh  format.sh  install_requirements_dev.sh  lint.sh
src/level_monitor/: __init__.py  config.py  logging.py  main.py
src/level_monitor/modules/: evaluators.py  models.py  parsers.py  regex.py  requests.py  telegram.py
