[build-system]
requires = ['setuptools>=65.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
authors = [{ name = "r0cks" }]
name = "level_monitor"
description = "Level Monitor"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Typing :: Typed",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
version = "0.0.1"
dependencies = ["pydantic>=1.10,<2", "tenacity", "requests"]
dynamic = ["readme"]


[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
readme = { file = "README.md" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
level_monitor = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--cov=level_monitor"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
show_error_codes = true
show_column_numbers = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
precision = 2

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = [
  "A",   # flake8-builtins
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "C4",  # flake8-comprehensions
  "B",   # flake8-bugbear
  "N",   # pep8-naming
  "C90", # mccabe
  "S",   # flake8-bandit
  "T20", # flake8-print
  "ERA", # eradicate
  "RUF", # Ruff-specific rules
  "TRY", # tryceratops
  "D",   # pydocstyle
  "UP",  # pyupgrade
  # "I",  # isort
]
lint.ignore = [
  "D1",   # pydocstyle: missing docstrings
  "D203", # pydocstyle: one-blank-line-before-class
  "D213", # pydocstyle: multi-line-summary-second-line
]
line-length = 100

[tool.ruff.lint.isort]
known-first-party = ["level_monitor"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]     # Use of `assert`
"__init__.py" = ["F401"] # imported but unused

[tool.ruff.lint.pep8-naming]
# Allow Pydantic's `@validator` and `@root_validator` decorator to trigger class method treatment.
classmethod-decorators = [
  "classmethod",
  "pydantic.validator",
  "pydantic.root_validator",
]
